--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <svg id="barcode"></svg>
-<form [formGroup]="form">
-  <input class="form-control"  formControlName="barcode" type="email" placeholder="Email"/>
-</form>
+<!--<form [formGroup]="form">-->
+<!--  <input class="form-control"  formControlName="barcode" type="email" placeholder="Email"/>-->
+<!--</form>-->
+
+<button (click)="createBarCode()">tạo bar code mới</button>
